# franca-capi-someip-sample

./: CMakeLists.txt  README.md  info  run_docker.sh
cmake_modules/: IpcMacro.cmake
config/: vsomeip-client.json  vsomeip-service.json
docker/: 1_prepare_package.sh  Dockerfile  entry_point.sh
fidl/: Buttons.fdepl  ML.fdepl  ML.fidl  MLTypes.fdepl  SmartML.fdepl
libraries/: CMakeLists.txt
scripts/: client.sh  service.sh  vsomeipd.sh
service/: buttonsservice.hpp  mlservice.hpp  smartmlservice.cpp  smartmlservice.hpp
setup_script/linux/: 1_prepare_package.sh  2_a_local_install_dep_linux.sh  2_b_local_build_linux.sh  2_docker_build.sh  Dockerfile
